# hcme

./: README.md  pyproject.toml  settings.toml
docs/: fleet_generation.md
hcme/: .gitignore  cli.py  config.py  constants.py  crs.py  metrics.py  utils.py
hcme/beam/: factory.py  households.py  input_generator.py  osm2physsim.py  population.py  wrapper.py
hcme/beam/events/: parser.py  registry.py
hcme/beam/templates/: physsim-network.xml.j2
hcme/beam/tests/: test_factory.py
hcme/db/: __init__.py  abstract.py  alembic.ini  env.py  io.py  script.py.mako
hcme/db/models/: metrics.py  registry.py
hcme/db/versions/: 2021-10-26_0089183d18be_initial_migration_and_input_data_model.py  2021-10-26_9b3e5ed35ac6_install_postgis.py  2021-10-29_935eb9413d58_update_tazs_to_multipolygon.py  2021-11-02_077a31cd58df_create_location_attributes.py  2021-11-02_4d0404fc1920_add_zone_type_to_location.py  (+17 more)
hcme/demand/: generate_travel_diary.py  reactor.py  summary.py
hcme/docs/: beam-inputs.md
hcme/plugins/: __init__.py  exporters.py
hcme/scenarios/: cli.py  reactor.py
hcme/supply/: transit_coverage.py
hcme/supply/fleets/: reactor.py
scripts/: create-population-clusters.py  create_od_plots.py  load_apns.py  load_tazs.py  ogr2poly.py  parse_person_trips.py  plot_demand_hexmap.py  plot_population_density.py  plot_transit_coverage.py  plot_transit_coverage_by_trip.py  plot_transit_distances.py  plot_trip_density.py  run_metrics.py  trip-clusters.py
scripts/eda/: README.md  plot_tazs.py  travel_demand.py
scripts/etl/: load_apns.py  load_beam_network.py  load_census_blocks.py  load_households.py  load_tazs.py  load_trips.py  pipeline.py
scripts/one_time/: download_gtfs.py  generate_census_block_samples.py
scripts/sql/: avg_household_size_by_taz.sql  trip_legs_by_origin_destination_city.sql  vacant_households_by_taz.sql
(+12 files in other folders)
