[tool.poetry]
name = "hcme"
version = "0.1.0"
description = ""
authors = ["Thomas Tu <thomasthetu@gmail.com>"]

[tool.poetry.scripts]
hcme = "hcme.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
pandas = "^1.3.3"
dynaconf = "^3.1.7"
black = "^21.9b0"
uuid = "^1.30"
SQLAlchemy-Utils = "^0.37.8"
GeoAlchemy2 = "^0.9.4"
invoke = "^1.6.0"
click = "^8.0.1"
psycopg2-binary = "^2.9.1"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
