[tool.poetry]
name = "hcme"
version = "0.1.0"
description = ""
authors = ["Thomas Tu <thomasthetu@gmail.com>"]

[tool.poetry.scripts]
hcme = "hcme.cli:main"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."hcme.exporters"]
"csv" = "hcme.plugins.exporters:metric_to_csv"


[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
pandas = "^1.3.3"
dynaconf = "^3.1.7"
black = "^21.9b0"
uuid = "^1.30"
SQLAlchemy-Utils = "^0.37.8"
GeoAlchemy2 = "^0.9.4"
invoke = "^1.6.0"
click = ">=7.0"
psycopg2-binary = "^2.9.1"
ipykernel = "^6.4.1"
tabulate = "^0.8.9"
vega = "^3.5.0"
Fiona = "^1.8.20"
geopandas = "^0.10.2"
altair = "^4.1.0"
loguru = "^0.5.3"
matplotlib = "^3.4.3"
folium = "^0.12.1"
Cartopy = "<0.20"
geoviews = "^1.9.2"
pykdtree = "^1.3.4"
holoviews = "^1.14.6"
geopy = "^2.2.0"
Rtree = "^0.9.7"
pygeos = "^0.11.1"
tqdm = "^4.62.3"
pygeocodio = "^1.0.1"
Shapely = "<1.8.0"
lxml = "^4.6.4"
pyrosm = "^0.6.1"
orjson = "^3.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
